Spacing fixes

--- a/vis/base.css
+++ b/vis/base.css
@@ -13,7 +13,7 @@ body {
 
 .graphic {
   width: 960px;
-  margin: auto;
+  margin: 0 auto 50px auto;
   color: #333;
 }
 
